--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,54 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+.pole {
+  width: 20px;
+  height: 125px;
+  background-color: black;
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+}
 
-*/
+.container {
+   margin: auto;
+   display: flex;
+    justify-content: center;
+}
+
+.blackBox {
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+    width: 100px;
+  height: 200px;
+  background-color: black;
+}
+
+.redLight {
+    background-color: red;
+    border-radius: 50%;
+    width: 50px;
+  height: 50px;
+  margin: auto;
+  border: none;
+}
+
+.yellowLight {
+    background-color:yellow;
+    border-radius: 50%;
+    width: 50px;
+  height: 50px;
+  margin: auto;
+  border: none;
+}
+
+.greenLight {
+    background-color:green;
+    border-radius: 50%;
+    width: 50px;
+  height: 50px;
+  margin: auto;
+  border: none;
+}
+
+.selected {
+    box-shadow: 0px 0px 40px yellow;
+}
